tests/models/enum/named/u16/pass/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = "val")]
        value: u16
    },
}
fn main() {}
