tests/models/enum/named/u16/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value {
        #[field(validate = validate_fn)]
        value: u16
    },
}
fn main() {}
